<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.membership.LoginActivity">

    <ImageView
        android:id="@+id/logo_danplay"
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:src="@drawable/logo_danplay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="left|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:paddingLeft="25dp"
            android:text="ID"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/login_id_textedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:hint="@string/intro_id"
                android:background="@drawable/color_underline"
                android:paddingBottom="5dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="left|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:paddingLeft="25dp"
            android:text="PASSWORD"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/login_password_textedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:hint="@string/intro_password"
                android:background="@drawable/color_underline"
                android:paddingBottom="5dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:paddingLeft="25dp"
            android:text="@string/login_fail_msg"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="invisible"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_forget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="25dp"
            android:paddingRight="20dp"
            android:text="@string/login_forget_msg"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/login"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/round_2"
            android:backgroundTint="@color/yellow"
            android:text="로그인"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:theme="@style/YellowRipple"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="회원가입"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="14sp"

            ></TextView>



    </LinearLayout>



    </LinearLayout>








