<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.matchapply.ApplyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:text="매칭 등록"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:paddingTop="10dp"
            android:text="@string/apply_link"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|bottom">

            <TextView
                android:id="@+id/text_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingRight="30dp"
                android:text="종목"
                android:textColor="@color/black"
                android:textSize="21dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_event"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/btn_event"
                android:text="종목 선택"
                android:textColor="@color/gray"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="left">

            <TextView
                android:id="@+id/apply_sports_empty"
                android:layout_marginLeft="115dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/apply_sports_empty"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="invisible"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center|bottom">

            <TextView
                android:id="@+id/text_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingRight="30dp"
                android:text="인원"
                android:textColor="@color/black"
                android:textSize="21dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_people"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_event"
                android:text="인원 선택"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:layout_marginBottom="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="left">

            <TextView
                android:id="@+id/apply_totalNum_empty"
                android:layout_marginLeft="115dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/apply_totalNum_empty"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="invisible"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center|bottom">

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingRight="30dp"
                android:text="시간"
                android:textColor="@color/black"
                android:textSize="21dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_event"
                android:text="시간 선택"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:layout_marginBottom="2dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="left">

            <TextView
                android:id="@+id/apply_playtime_empty"
                android:layout_marginLeft="115dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/apply_playtime_empty"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="invisible"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center|bottom">

            <TextView
                android:id="@+id/text_where"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingRight="30dp"
                android:text="장소"
                android:textColor="@color/black"
                android:textSize="21dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_where"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_event"
                android:text="장소 선택"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:layout_marginBottom="2dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="left">

            <TextView
                android:id="@+id/apply_place_empty"
                android:layout_marginLeft="115dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/apply_place_empty"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="invisible"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:gravity="center|top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_content"
                android:layout_width="330dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit"
                android:gravity="top"
                android:hint="내용을 적어주세요\n+  유의사항\n\n\n"
                android:maxLength="150"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:textColorHint="@color/gray"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/apply_btn_msg"
                android:layout_marginTop="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/apply_playtime_empty"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="invisible"
                />
            <Button
                android:id="@+id/btn_apply"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn"
                android:text="적용"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/fl_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>