<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_weight="0.0001"
                android:text="회원가입"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0.4"
            android:layout_marginTop="20dp"
            android:gravity="left|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingLeft="30dp"
                android:text="아이디"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="350dp"
                    android:layout_height="40dp"
                    android:background="@drawable/color_round"
                    android:hint="@string/email_example"
                    android:paddingLeft="10dp"
                    android:textSize="18dp"
                    android:textStyle="bold"

                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:paddingLeft="30dp"
                    android:text="비밀번호"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="350dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"

                    android:layout_marginRight="20dp">

                    <EditText
                        android:id="@+id/password_edittext"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:background="@drawable/color_round"
                        android:inputType="textPassword"
                        android:hint="@string/password_example"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"
                        android:textStyle="bold"

                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/password_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:paddingLeft="30dp"
                    android:text="비밀번호 재확인"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="350dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"

                    android:layout_marginRight="20dp">

                    <EditText
                        android:id="@+id/password_check_edittext"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:background="@drawable/color_round"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:paddingLeft="30dp"
                    android:text="이름"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="350dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"

                    android:layout_marginRight="20dp">

                    <EditText
                        android:id="@+id/username_edittext"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:background="@drawable/color_round"
                        android:hint="@string/username_example"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"
                        android:textStyle="bold"

                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:paddingLeft="30dp"
                    android:text="생년월일"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="350dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"

                    android:layout_marginRight="20dp">

                    <EditText
                        android:id="@+id/birth_edittext"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:background="@drawable/color_round"
                        android:hint="@string/birth_example"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"
                        android:textStyle="bold"

                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sex_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:paddingLeft="30dp"
                    android:text="성별"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingLeft="20dp">


                  <RadioGroup
                      android:paddingTop="10dp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:theme="@style/CustomRadioButton"
                      >
                  <RadioButton
                      android:id="@+id/checkbox_male"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="남자"
                      android:textSize="14sp"
                      android:textStyle="bold"
                      android:paddingRight="20dp"

                      ></RadioButton>

                  <RadioButton

                      android:id="@+id/checkbox_female"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="여자"
                      android:textSize="14sp"
                      android:textStyle="bold"
                      ></RadioButton>
                  </RadioGroup>
              </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_prefer_sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:paddingLeft="30dp"
                    android:text="선호 종목"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/button_tennis"
                        android:layout_width="65dp"
                        android:layout_height="30dp"
                        android:background="@drawable/btn_event"
                        android:text="테니스"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        android:layout_margin="5dp"/>

                    <Button
                        android:id="@+id/button_soccer"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:background="@drawable/btn_event"
                        android:text="축구"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        android:layout_margin="5dp"/>

                    <Button
                        android:id="@+id/button_basketball"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:background="@drawable/btn_event"
                        android:text="농구"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        android:layout_margin="5dp"/>

                    <Button
                        android:id="@+id/button_jokgoo"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:background="@drawable/btn_event"
                        android:text="족구"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        android:layout_margin="5dp"/>

                    <Button
                        android:id="@+id/button_futsal"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:background="@drawable/btn_event"
                        android:text="풋살"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        android:layout_margin="5dp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0.4"
                android:gravity="center|top"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_sign_up"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn"
                    android:text="회원가입"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>




    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>